# smrs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  docker-compose.yaml
.github/workflows/: publish.yaml
conf/: smrs.conf
htdocs/: alerts.html  existing.shtml  header.html  index.html  index.shtml
htdocs/css/: smrs.css
htdocs/js/: smrs.js
src/: cgi.rs  main.rs  store.rs  token.rs
