[package]
name = "smrs"
version = "0.1.1"
authors = ["Igor Serebryany <igor47@moomers.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xkpass = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
